Wed Jun  7 21:42:36 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_config_handlers.mpb
        
          Fixed static library ordering problem.

Wed Jun  7 13:34:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-doxygen.h:
          Added ACE_HAS_NETLINK so that we get documentation for the new
          netlink classes

Wed Jun  7 13:31:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Removed chorus

Wed Jun  7 13:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/sys/os_socket.h:
          When ACE_HAS_NETLINK is defined, include more files specific
          for this protocol.

Wed Jun  7 12:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Netlink_Addr.{h,cpp,inl}:
        * ace/SOCK_Netlink.{h,cpp,inl}:
          New files for netlink sockets. Thanks to Robert Iakobashvili
          <coroberti at gmail dot com> and Razi Ben-Yehuda
          <raziebe at gmail dot com> for creating these new files.
          These files will be added to the ACE mpc later this week, with
          the files in the repo it is much easier to test them on
          multiple linux version. See bugzilla bug 2317 for more info.

Wed Jun  7 12:28:18 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Changed the message displayed when a project isn't build when a
          particular feature is disabled.  Many users thought that this
          message was an error, I believe, because of the word 'missing'.

Wed Jun  7 11:46:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-suncc-common.h:
          New config file for the SunCC compiler, idea is to refactor
          all things related to the Sun C++ compiler to this file. This is
          to make it easier to support Sun C++ on Linux
